# Echo-2D

./: .gitignore  CMakeLists.txt  README.md  TODO.md
examples/: _runexamples.sh
examples/bouncingsquare/: bouncingsquare  bouncingsquare.cpp
examples/circle/: circle  circle.cpp  imgui.ini
examples/grid/: grid  grid.cpp
examples/grid/shaders/: Frag.glsl  Vert.glsl
examples/sprites/: sprites  sprites.cpp
examples/stresstest1/: stresstest1  stresstest1.cpp
examples/textures/: textures  textures.cpp
include/: Echo2D.h
include/core/: core.h
include/engine/: Application.h  ApplicationInfo.h  Camera.h  Colors.h  Font.h  InputHandler.h  Renderer.h  Spritesheet.h  Texture.h  WindowHandler.h
include/utils/: ShaderUtils.h  Utils.h
readmemedia/: bouncingsquare.mov
shaders/: Frag.glsl
src/engine/: Application.cpp  Camera.cpp  Font.cpp  InputHandler.cpp  Renderer.cpp  Spritesheet.cpp  Texture.cpp  WindowHandler.cpp
src/utils/: ShaderUtils.cpp
